bookinfo-permissive-mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: bookinfo-permissive
  namespace: bookinfo
spec:
  mtls:
    mode: PERMISSIVE
