vs-fault-injection.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts: ["reviews"]
  http:
    - fault:
        delay:
          fixedDelay: 5s
          percentage: { value: 100 }
      route:
        - destination:
            host: reviews
            subset: v2
